# sunangle

./: .gitignore  Cargo.toml  README.md  Trunk.toml  index.html  rustfmt.toml  todo.txt
.github/workflows/: pages.yml
coordinate-systems/: Cargo.toml
coordinate-systems/src/: cartesian_coordinate_system.rs  consts.rs  coordinate_system.rs  core.rs  core_becs.rs  core_ecs.rs  core_hecs.rs  core_test.rs  dimension_info.rs  generic_systems.rs  geom.rs  gl.rs  lib.rs  names.rs  specific_cartesian_coordinate_system.rs  specific_coordinate_system.rs  specific_ellipsoidal_coordinate_system.rs  units.rs
coordinate-systems/src-old/src/: coordinate_system.rs  ellipsoidal_coordinate_system.rs  lib.rs  predefined.rs
coordinate-systems/src-take1/src/: cartesian_coordinate_system.rs  coordinate_system.rs  datum.rs  dimension_info.rs  specific_coordinate_system.rs  specific_datum.rs
coordinate-systems/src-take2/: epsg.rs  gml.rs
coordinate-systems/src/gis/: datum.rs  mod.rs
docs/: index.html  sunangle-691244afca918df7.js  sunangle-691244afca918df7_bg.wasm  sunangle-704331dc9d0a9998.js  sunangle-704331dc9d0a9998_bg.wasm  sunangle-7f97e63a6ae81529bd219c3d590b68e83cf8beb27c6b4277be2bd253a8b8a5569b7c55e0298d90fa564cbc974368af62.js  sunangle-85e3c2db5ac34db753014c52690d30d5d24e9e73faea044b7cee6ba4d5a07d1e42b99382f1b17da64af04ac986e9fe5b.js  sunangle-e3f8523f3e2b16bf.js  sunangle-e3f8523f3e2b16bf_bg.wasm
ecs-namespace/: Cargo.toml
ecs-namespace/src/: lib.rs
src/: app.rs  eframe_app.rs  lib.rs  main.rs  tai.rs  view_state.rs
src/threed/: threedapp.rs
src/time/: astro_year.rs  day.rs  gregorian.rs  leap_second_history.rs  mdn.rs  mod.rs  month.rs  year_ops.rs
src/ui/: showable.rs
sunangle/: Cargo.toml
sunangle/src/: draw_frame_info.rs  eframe_app.rs  lib.rs  main.rs  tai.rs  view_state.rs  world_state.rs
sunangle/src/geometry/: mod.rs
sunangle/src/threed/: mod.rs  threedapp.rs
sunangle/src/time/: day.rs  day_ops.rs  mdn.rs  mod.rs  month.rs  month_ops.rs  time_value.rs  year_ops.rs
sunangle/src/ui/: animation_ctrl_window.rs  app.rs  current_time_ctrl_window.rs  ecs_explore_window.rs  mod.rs  showable.rs  time_ctrl_window.rs
video/: Cargo.toml
video/src/: format.rs  frame_rate.rs  lib.rs  resolution.rs  timebase.rs  timecode.rs  timecode_kind.rs
world-model/: Cargo.toml
world-model/src/: earth_agnostic.rs  earth_ellipsoid.rs  lib.rs
world-model/src-take2/: earth_ellipsoid.rs
www/: index.html
www/assets/: manifest.json  sw.js
