[package]
name = "sunangle"
version = "0.1.0"
authors = [
    "Marsh Ray <marshray@live.com>"
    # With thanks to Emil Ernerfeldt for eframe_template!
]
edition = "2021"
rust-version = "1.71"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
#3 chrono = { version = "0.4", optional = true, default-features = true, features = [
#3     "clock",
#3     "js-sys",
#3     "serde",
#3     "std",
#3     "wasmbind",
#3 ] }
egui = "0.23.0"
egui_extras = { version = "*", features = [
    "chrono",
    "datepicker",
] }
#3 egui_extras = { version = "*", features = [
#3 #    "all_loaders",
#3     "chrono",
#3     "datepicker",
#3 ] }
#image = { version = "0.24", features = ["jpeg", "png"] }
eframe = { version = "0.23.0", default-features = false, features = [
    #"accesskit",     # Make egui comptaible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
] }

# Crates general purpose
log = "0.4"
num-traits = "0.2.17"
#scopeguard = "1.2.0"
serde = { version = "1", features = ["derive"] }
thiserror = "1.0.50"

# Crates for time stuff
anyhow = "1.0.75"
chrono-tz = "0.8.4"
# tzfile = "0.1.3"
# humantime = "2.1.0" # A parser and formatter for std::time::{Duration, SystemTime}

# native or web

## native: General purpose
[target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
env_logger = "0.10"
#3 chrono = { version = "0.4", optional = true, default-features = true, features = [
#3     "clock",
#3     "js-sys",
#3     "serde",
#3     "std",
#3     "wasmbind",
#3 ] }
#glow [target.'cfg(not(any(target_arch = "wasm32")))'.dependencies]
#glow glutin = { version = "0.28", optional = true }
#glow sdl2 = { version = "0.35", optional = true }

# web:
[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen-futures = "0.4"
#glow wasm-bindgen = { version = "0.2" }
#glow web-sys = { version = "0.3", features=["HtmlCanvasElement", "WebGl2RenderingContext", "Window"] }
#3 chrono = { version = "0.4", optional = true, default-features = true, features = [
#3     "clock",
#3     "js-sys",
#3     "serde",
#3     "std",
#3     "wasmbind",
#3 ] }

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

[dev-dependencies]
insta = { version = "1.34.0", features = ["ron"] }

#[patch.crates-io]

# If you want to use the bleeding edge version of egui and eframe:
# egui = { git = "https://github.com/emilk/egui", branch = "master" }
# eframe = { git = "https://github.com/emilk/egui", branch = "master" }

# If you fork https://github.com/emilk/egui you can test with:
# egui = { path = "../egui/crates/egui" }
# eframe = { path = "../egui/crates/eframe" }
