[workspace]
resolver = "2"
members = [
    "sunangle"
]

#========================================== patches ================================================

#------------------------------------------- glow

# Glow introduced a breaking change, glow::Context became !Sync.
#
# https://github.com/grovesNL/glow/commit/edfd08e2a941f4c3db6a3ba6cf84865f7c5365ff revert
# https://github.com/grovesNL/glow/commit/c4a5f7151b9b4bbb380faa06ec27415235d1bf7e use this one
#
# Glow has reverted the change on main, but hasn't tagged a post-0.13.0 release yet
#
[patch.crates-io.glow]
version = "0.13"
git = "https://github.com/grovesNL/glow.git"
rev = "c4a5f7151b9b4bbb380faa06ec27415235d1bf7e"

#------------------------------------------- egui, egui_glow, eframe, egui-winit

# https://github.com/emilk/egui/pull/3598 This merge tracked a breaking change in glow
# https://github.com/emilk/egui/issues/3645 Revert "Change Arc<glow::Context> to Rc<glow::Context>
# https://github.com/emilk/egui/pull/3646 Make glow Send + Sync again, thanks @surban !
#
# @emilk says this will have to wait until egui 0.25
# https://github.com/emilk/egui/pull/3646#issuecomment-1828388082
#
# We could use 40eeed922d, which is based off of 0.24.0, before the rebase to egui master.
# https://github.com/surban/egui/tree/40eeed922d0b3fe4ba943dff1866ee600e21b676
# But 45022a6e945486a2a4f46d42524284128319c803 has most of the fixes that went into 0.24.1
#
# @marshray branched from @surban on GitHub and rebased @surban's changes on 0.24.1.
# https://github.com/marshray/surban.egui/commit/baf6e8ba316b8e5edff9fbeab2a9a5134856a21c

[patch.crates-io.egui]
version = "=0.24.1"
git = "https://github.com/marshray/surban.egui.git"
rev = "baf6e8ba316b8e5edff9fbeab2a9a5134856a21c"

[patch.crates-io.egui_glow]
version = "=0.24.1"
git = "https://github.com/marshray/surban.egui.git"
rev = "baf6e8ba316b8e5edff9fbeab2a9a5134856a21c"
 
[patch.crates-io.eframe]
version = "=0.24.1"
git = "https://github.com/marshray/surban.egui.git"
rev = "baf6e8ba316b8e5edff9fbeab2a9a5134856a21c"
 
[patch.crates-io.egui-winit]
version = "=0.24.1"
git = "https://github.com/marshray/surban.egui.git"
rev = "baf6e8ba316b8e5edff9fbeab2a9a5134856a21c"

#------------------------------------------- three-d

# Local repo tweaks "three-d =0.16.3" to use:
#    glow:       0.12 -> 0.13
#    egui:       0.22 -> =0.24.1
#    egui_glow:  0.22 -> =0.24.1

[patch.crates-io.three-d]
version = "=0.16.3"
git = "https://github.com/marshray/three-d.git"
rev = "0cd8b4cc2d5fc52a5e5ae3dfe1458c4b1056d653"

#=================================  profile settings ===============================================

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2

