[package]
name = "coordinate-systems"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]
derive_more = { version = "1.0.0-beta.6", default-features = false, features = ["deref", "deref_mut", "display"] }
num-rational.workspace = true
once_cell.workspace = true
serde.workspace = true
hecs = { version = "0.10.4", features = ["macros", "column-serialize", "row-serialize"] }
#hecs-hierarchy = "0.11.7"
hecs-macros = "0.10.0"

#strum = { strum = "0.25.0", features = ["derive"] }

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true

[badges]
maintenance = { status = "actively-developed" }

