[package]
name = "coordinate-systems"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

[dependencies]

anyhow.workspace = true
derive_more.workspace = true
enumflags2 = "0.7.8"
#ecs.workspace = true
hecs.workspace = true
num-rational.workspace = true
once_cell.workspace = true
#serde.workspace = true

[dev-dependencies]
anyhow.workspace = true
insta.workspace = true

[badges]
maintenance = { status = "actively-developed" }

