[package]
name = "world-model"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true

#==================================== dependencies ===================================

[dependencies]

#--------- General purpose

#anyhow.workspace = true
#log.workspace = true
#num-integer.workspace = true
#num-rational.workspace = true
#num-traits.workspace = true
#once_cell.workspace = true
serde.workspace = true
#ron.workspace = true
#thiserror.workspace = true

petgraph = { version = "0.6.4", default-features = false, features = ["serde-1"] }

#--------- Defined in this workspace

coordinate-systems.workspace = true

#================================== dev-dependencies ===============================================

[dev-dependencies]
#anyhow.workspace = true
insta.workspace = true
